--- a/src/util/Inputs/style.module.scss
+++ b/src/util/Inputs/style.module.scss
@@ -28,5 +28,8 @@
             font-size: 10px;
             transform: translate(-5%, -50%);
         }
+        @media screen and (max-width: $sm) {
+            width: 260px;
+        }
     }
 }
