--- a/src/constants/theme.scss
+++ b/src/constants/theme.scss
@@ -1,4 +1,5 @@
 @import "variables";
+$green-light: #008c00;
 $primary: $green;
 $theme-colors: (
     "primary": $green,
@@ -15,18 +16,30 @@ body {
 
 h1 {
     font-size: 28pt;
+    font-family: "poppins";
 }
 
 h2 {
     font-size: 24pt;
+    font-family: "poppins";
 }
 
 h3 {
     font-size: 18pt;
+    font-family: "poppins";
 }
 
 a {
+    font-family: "poppins";
     text-decoration: none !important;
+}
+
+div {
+    font-family: "poppins";
+}
+
+span {
+    font-family: "poppins";
 }
 
 // Primary button (for important actions)
