--- a/src/util/Inputs/style.module.scss
+++ b/src/util/Inputs/style.module.scss
@@ -13,7 +13,7 @@
             opacity: 0.3;
         }
         @media screen and (max-width: $md) {
-            height: 29px;
+            height: 37px;
             font-size: 12px;
             border: unset;
         }
@@ -27,14 +27,12 @@
         transform: translate(-10%, -50%);
     }
     @media screen and (max-width: $md) {
-        max-width: 260px;
+        max-width: unset;
+        width: 100%;
         .searchBtn {
-            padding: 4px;
-            font-size: 10px;
+            padding: 8px;
+            font-size: 8px;
             transform: translate(-5%, -50%);
-        }
-        @media screen and (max-width: $sm) {
-            width: 260px;
         }
     }
 }
