--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -4,8 +4,11 @@ $grey: #959595;
 .wrapper {
     .findFree {
         background-color: $yellow;
-        position: relative;
-        padding: 8% 12%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 6%;
+        padding-right: 2%;
         color: $blue-dark;
         .leftSide {
             .title {
@@ -17,13 +20,13 @@ $grey: #959595;
                 .curve {
                     position: absolute;
                     bottom: -17%;
-                    left: 15%;
+                    left: 25%;
                 }
             }
             .content {
                 font-size: 24px;
                 line-height: 40px;
-                width: 60%;
+                max-width: 560px;
                 margin-top: 55px;
             }
             .popular {
@@ -38,27 +41,22 @@ $grey: #959595;
             }
         }
         .person {
-            position: absolute;
-            height: 90%;
-            bottom: 0;
-            left: 57%;
-            transform: translateX(-50%);
+            height: 630px;
+            width: fit-content;
+            transform: scaleX(-1);
+            vertical-align: middle;
         }
-        @media screen and (max-width: $md) {
-            padding: 80px 40px 80px 40px;
+        @media screen and (max-width: $xxl) {
             .leftSide {
                 .title {
                     font-size: 30px;
-                    line-height: 32px;
-                    .curve {
-                        right: 35%;
-                        bottom: -30%;
-                    }
+                    line-height: 45px;
                 }
                 .content {
-                    margin-top: 25px;
+                    margin-top: 32px;
                     font-size: 14px;
-                    line-height: 18px;
+                    line-height: 21px;
+                    max-width: 270px;
                 }
                 .popular {
                     font-size: 10px;
@@ -71,21 +69,25 @@ $grey: #959595;
                 }
             }
             .person {
-                width: 230px;
-                height: fit-content;
-                left: 65%;
-                transform: translateX(-50%);
+                height: 366px;
             }
-            @media screen and (max-width: $sm) {
-                padding: 20px 20px 80px 20px;
-                .leftSide {
-                    .container {
-                        max-width: 115px;
-                    }
-                    .popular {
-                        display: none;
-                    }
+        }
+        @media screen and (max-width: $md) {
+            position: relative;
+            padding: 42px 22px 76px 22px;
+            .leftSide {
+                .content {
+                    max-width: 115px;
                 }
+                .popular {
+                    display: none;
+                }
+            }
+            .person {
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                height: 295px;
             }
         }
     }
@@ -293,6 +295,7 @@ $grey: #959595;
         background-color: $grey;
         background-image: url("../../assets/landing/logoMaker.svg");
         background-position: right center;
+        background-size: cover;
         background-repeat: no-repeat;
         padding: 70px 100px;
         border-top: 5px solid $yellow-dark;
@@ -313,6 +316,7 @@ $grey: #959595;
             font-size: 22px;
         }
         @media screen and (max-width: $xxl) {
+            background-image: url("../../assets/landing/logoMaker.svg");
             .title {
                 font-size: 39px;
                 line-height: 39px;
@@ -320,6 +324,23 @@ $grey: #959595;
             .description {
                 font-size: 22px;
                 line-height: 35px;
+                margin: 20px 0;
+            }
+            .button {
+                font-size: 12px;
+            }
+        }
+        @media screen and (max-width: $xl) {
+            padding: 18px 50px;
+            .title {
+                max-width: 235px;
+                font-size: 29px;
+                line-height: 43.5px;
+            }
+            .description {
+                font-size: 16px;
+                line-height: 24px;
+                max-width: 211px;
             }
         }
         @media screen and (max-width: $md) {
@@ -330,11 +351,14 @@ $grey: #959595;
             flex-direction: column;
             background-image: unset;
             .title {
-                font-size: 40px;
+                max-width: unset;
+                font-size: 24px;
+                line-height: 36px;
             }
             .description {
                 margin: 33px 0;
                 text-align: center;
+                max-width: 290px;
             }
             .logoMakerMobile {
                 width: 100%;
@@ -354,12 +378,12 @@ $grey: #959595;
                 .image {
                     height: 100%;
                     border: 5px solid $yellow-dark;
-                    border-top-right-radius: 100px;
-                    border-bottom-left-radius: 100px;
+                    border-top-right-radius: 119px;
+                    border-bottom-left-radius: 119px;
                 }
                 .card {
                     position: absolute;
-                    top: 5%;
+                    top: -12%;
                     right: -22%;
                     padding: 37px 23px;
                     display: flex;
@@ -405,33 +429,36 @@ $grey: #959595;
             }
         }
         .contentRight {
-            margin-left: 20%;
             display: flex;
             justify-content: center;
             flex-direction: column;
+            margin-top: 145px;
+            margin-left: 30px;
             .title {
                 color: $green-light;
                 font-size: 33px;
+                font-weight: bold;
                 line-height: 45px;
             }
             .description {
-                margin-top: 50px;
+                margin-top: 40px;
                 color: $grey;
                 font-size: 18px;
                 line-height: 28px;
             }
             .checkList {
-                margin-top: 80px;
+                margin-top: 45px;
                 color: $black-dark;
                 font-size: 21px;
                 line-height: 35px;
             }
         }
         @media screen and (max-width: $xl) {
+            padding: 71px 97px;
             flex-direction: column;
             .contentRight {
                 margin-left: 0;
-                margin-top: 150px;
+                margin-top: 100px;
                 .description {
                     padding: 0 20px;
                 }
@@ -450,34 +477,39 @@ $grey: #959595;
         }
     }
     .category {
-        padding: 100px;
+        background-color: $grey-light;
+        padding: 0 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
+
         .title {
+            font-weight: bold;
             color: $green-light;
-            font-size: 45px;
+            font-size: 37px;
+            line-height: 56px;
         }
         .subTitle {
             margin-top: 22px;
             color: $grey;
             font-size: 20px;
-            line-height: 20px;
-            max-width: 680px;
+            line-height: 30px;
+            max-width: 550px;
         }
         .content {
-            margin-top: 70px;
+            margin-top: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
         }
         @media screen and (max-width: $md) {
             padding: 20px;
             .content {
                 margin-top: 30px;
-            }
-            .content {
                 flex-direction: column;
             }
         }
@@ -492,22 +524,24 @@ $grey: #959595;
             display: flex;
         }
         .content {
+            margin-left: 120px;
             .title {
                 color: $green;
                 font-size: 30px;
+                line-height: 45px;
             }
             .description {
-                margin-top: 40px;
+                margin-top: 15px;
                 color: $grey;
                 font-size: 16px;
-                line-height: 28px;
+                line-height: 24px;
             }
             .like {
-                margin-top: 120px;
+                margin-top: 65px;
                 width: fit-content;
                 .subTitle {
                     color: $black;
-                    font-size: 24px;
+                    font-size: 17px;
                 }
                 .imgContainer {
                     margin-top: 20px;
@@ -527,7 +561,8 @@ $grey: #959595;
                 }
             }
         }
-        @media screen and (max-width: $md) {
+        @media screen and (max-width: $xxl) {
+            flex-direction: column;
             padding: 50px;
             .cardContainer {
                 display: none;
@@ -550,38 +585,62 @@ $grey: #959595;
                 }
             }
         }
+        @media screen and (max-width: $md) {
+            .content {
+                margin-left: 0;
+            }
+        }
     }
     .business {
         background-color: $white;
         padding: 130px 0 30px 0;
         .container {
             background-image: url("../../assets/landing/working-from-home.png");
-            background-size: 100%;
+            background-size: 100% 100%;
             background-repeat: no-repeat;
             background-position: center;
-            padding: 75px 113px;
+            padding: 113px;
             height: 678px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             .title {
-                font-size: 57px;
+                font-size: 45px;
                 font-weight: bold;
-                line-height: 82px;
+                line-height: 67.5px;
                 color: $green;
                 .highlight {
                     font-style: italic;
                     font-weight: 400;
                 }
             }
+            button {
+                padding: 20px;
+                font-size: 18px;
+                line-height: 27px;
+                max-width: 190px;
+            }
+            @media screen and (max-width: $xl) {
+                height: 508px;
+            }
         }
         @media screen and (max-width: $md) {
             padding: 0;
             .container {
+                display: block;
                 background-image: url("../../assets/landing/working-from-home-mobile.png");
                 padding: 30px 45px;
                 background-position: top;
                 height: unset;
                 .title {
-                    font-size: 28px;
-                    line-height: 40px;
+                    font-size: 14px;
+                    line-height: 20px;
+                }
+                .button {
+                    font-size: 12px;
+                    line-height: 18px;
+                    padding: 13px 10px;
+                    max-width: 100px;
                 }
             }
         }
