--- a/src/util/Footer/style.module.scss
+++ b/src/util/Footer/style.module.scss
@@ -50,40 +50,47 @@
             }
         }
     }
+    @media screen and (max-width: $lg) {
+        display: none;
+    }
 }
 
 .footerMobile {
-    padding: 45px 35px;
-    .title {
-        font-size: 14px;
-        line-height: 30px;
-        color: $grey;
-    }
-    .section {
-        width: 50%;
-        color: $grey;
+    display: none;
+    @media screen and (max-width: $lg) {
+        display: block;
+        padding: 45px 35px;
         .title {
-            font-size: 23px;
-            line-height: 23px;
-            color: $black-dark;
+            font-size: 14px;
+            line-height: 30px;
+            color: $grey;
         }
-        .logo {
-            margin-top: 20px;
-            width: 75%;
-        }
-        .description {
-            margin-left: 10px;
-            font-size: 16px;
-            margin-top: 40px;
-        }
-        .contactInfo {
-            margin-top: 20px;
-            span {
-                color: $green-light;
+        .section {
+            width: 50%;
+            color: $grey;
+            .title {
+                font-size: 23px;
+                line-height: 23px;
+                color: $black-dark;
             }
-        }
-        .contact {
-            margin-top: 65px;
+            .logo {
+                margin-top: 20px;
+                width: 75%;
+            }
+            .description {
+                margin-left: 10px;
+                font-size: 16px;
+                margin-top: 40px;
+            }
+            .contactInfo {
+                margin-top: 20px;
+                span {
+                    color: $green-light;
+                }
+            }
+            .contact {
+                margin-top: 65px;
+            }
         }
     }
 }
