--- a/src/components/Navigation/style.module.scss
+++ b/src/components/Navigation/style.module.scss
@@ -2,7 +2,7 @@
 
 .navbar {
     margin: 26px 150px;
-    @media screen and (max-width: $md) {
+    @media screen and (max-width: $xxl) {
         margin: 10px 20px;
     }
     .readyVladeLogo {
