--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -88,7 +88,7 @@ $grey: #959595;
                 right: 0;
                 bottom: 0;
                 height: 295px;
-                width: fit-content;
+                width: 250px;
             }
         }
     }
