--- a/src/components/Navigation/style.module.scss
+++ b/src/components/Navigation/style.module.scss
@@ -8,7 +8,7 @@
     .readyVladeLogo {
         height: 94px;
         width: 265px;
-        @media screen and (max-width: $md) {
+        @media screen and (max-width: $xxl) {
             height: 45px;
             width: 141px;
         }
@@ -16,17 +16,17 @@
     &:global(.navbar) {
         align-items: flex-end;
         @media screen and (max-width: $sm) {
-            justify-content: flex-end;
+            justify-content: space-between;
             align-items: center;
         }
-        :global(.navbar-brand) {
-            @media screen and (max-width: $sm) {
-                position: absolute;
-                left: 50%;
-                top: 0;
-                transform: translateX(-50%);
-            }
-        }
+        // :global(.navbar-brand) {
+        //     @media screen and (max-width: $sm) {
+        //         position: absolute;
+        //         left: 50%;
+        //         top: 0;
+        //         transform: translateX(-50%);
+        //     }
+        // }
         :global(.navbar-toggler) {
             border-width: 0;
             &:focus {
