fixed person issue

--- a/src/util/Card/style.module.scss
+++ b/src/util/Card/style.module.scss
@@ -146,9 +146,8 @@ $yellow: #fed821;
 }
 .customer {
 	padding: 36px 30px;
-	width: 100%;
+	width: 328px;
 	max-width: 328px;
-	width: 100%;
 	border-radius: 8px;
 	margin: 0 25px;
 	filter: drop-shadow(0px 2px 24px rgba(0, 0, 0, 0.08));
