--- a/src/util/Footer/style.module.scss
+++ b/src/util/Footer/style.module.scss
@@ -55,42 +55,100 @@
     }
 }
 
-.footerMobile {
+.footerTablet {
     display: none;
-    @media screen and (max-width: $lg) {
+    @media (min-width: $md) and (max-width: $lg) {
         display: block;
-        padding: 45px 35px;
+        padding: 47px 35px;
         .title {
             font-size: 14px;
-            line-height: 30px;
+            line-height: 34px;
             color: $grey;
         }
         .section {
-            width: 50%;
             color: $grey;
             .title {
                 font-size: 23px;
-                line-height: 23px;
+                line-height: 27px;
                 color: $black-dark;
             }
-            .logo {
+            .description {
+                font-size: 13px;
                 margin-top: 20px;
-                width: 75%;
+            }
+        }
+        .logo {
+            margin-top: 20px;
+            width: 190px;
+        }
+        .contactInfo {
+            color: $grey;
+            margin-top: 20px;
+            font-size: 16px;
+            span {
+                color: $green-light;
+            }
+            &:last-child {
+                margin-top: 0;
+            }
+        }
+        .contact {
+            font-size: 23px;
+            line-height: 27px;
+            color: $black-dark;
+            margin-top: 20px;
+            span {
+                margin-left: 20px;
+                color: $grey;
+                font-size: 16px;
+                line-height: 20px;
+            }
+        }
+    }
+}
+
+.footerMobile {
+    display: none;
+    @media screen and (max-width: $md) {
+        display: block;
+        padding: 30px;
+        .title {
+            font-size: 10px;
+            line-height: 22px;
+            color: $grey;
+        }
+        .section {
+            color: $grey;
+            .title {
+                font-size: 17px;
+                line-height: 20px;
+                color: $black-dark;
             }
             .description {
-                margin-left: 10px;
-                font-size: 16px;
-                margin-top: 40px;
-            }
-            .contactInfo {
+                font-size: 13px;
                 margin-top: 20px;
-                span {
-                    color: $green-light;
-                }
             }
-            .contact {
-                margin-top: 65px;
+        }
+        .logo {
+            margin-top: 20px;
+            width: 120px;
+        }
+        .contactInfo {
+            color: $grey;
+            margin-top: 20px;
+            font-size: 13px;
+            span {
+                color: $green-light;
             }
+            &:last-child {
+                margin-top: 0;
+            }
+        }
+        .contact {
+            font-size: 15px;
+            line-height: 20px;
+            color: $black-dark;
+            margin-top: 20px;
         }
     }
 }
