--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -49,7 +49,12 @@ $grey: #959595;
             .leftSide {
                 .title {
                     font-size: 30px;
-                    line-height: 45px;
+                    line-height: 33px;
+                    .curve {
+                        width: 83px;
+                        left: 30%;
+                        bottom: -30%;
+                    }
                 }
                 .content {
                     margin-top: 32px;
@@ -108,6 +113,13 @@ $grey: #959595;
                 margin-right: 60px;
             }
         }
+        @media screen and (max-width: $xxl) {
+            & > div {
+                &:not(:first-child) {
+                    margin-right: 40px;
+                }
+            }
+        }
         @media screen and (max-width: $md) {
             padding: 12px;
             & > div {
@@ -145,9 +157,13 @@ $grey: #959595;
             border-bottom: 3px solid $yellow-dark;
             width: fit-content;
             padding-bottom: 10px;
+            @media screen and (max-width: $xxl) {
+                font-size: 30px;
+                line-height: 45px;
+            }
             @media screen and (max-width: $md) {
                 font-size: 22px;
-                text-align: center;
+                // text-align: center;
                 margin: auto;
             }
         }
@@ -166,7 +182,19 @@ $grey: #959595;
                     }
                 }
             }
-
+            .arrow {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                z-index: 1;
+            }
+            .right {
+                left: unset;
+                right: 0;
+            }
             :global(.control-dots) {
                 :global(.dot) {
                     background-color: $green;
@@ -174,8 +202,11 @@ $grey: #959595;
                     height: 15px;
                 }
             }
+            @media screen and (max-width: $xxl) {
+                padding: 45px 50px;
+            }
             @media screen and (max-width: $md) {
-                padding: 50px 0;
+                padding: 50px 20px;
                 .container {
                     justify-content: center;
                 }
@@ -198,7 +229,7 @@ $grey: #959595;
                 }
             }
             @media screen and (max-width: $xxl) {
-                padding-bottom: 110px;
+                padding: 0 60px 110px 60px;
             }
             @media screen and (max-width: $md) {
                 padding: 20px;
@@ -264,7 +295,7 @@ $grey: #959595;
                 }
             }
         }
-        @media screen and (max-width: $md) {
+        @media screen and (max-width: $xl) {
             padding: 57px;
             .title {
                 font-size: 25px;
@@ -298,6 +329,54 @@ $grey: #959595;
                 }
                 .rightSide {
                     width: 100%;
+                    max-width: 650px;
+                    margin-left: 0;
+                }
+            }
+        }
+        @media screen and (max-width: $md) {
+            padding: 45px 18px;
+            .title {
+                font-size: 20px;
+                line-height: 30px;
+            }
+            .container {
+                .leftSide {
+                    .card {
+                        width: 100%;
+                        margin-top: 10px;
+                        .image {
+                            svg {
+                                width: 33px;
+                                height: 33px;
+                            }
+                        }
+                        .content {
+                            .title {
+                                font-size: 12px;
+                                line-height: 25px;
+                            }
+                            .description {
+                                font-size: 9px;
+                                line-height: 15px;
+                            }
+                        }
+                    }
+                }
+                .rightSide {
+                    max-width: unset;
+                    .rectYellow {
+                        width: 35px;
+                        height: 45px;
+                        top: -10px;
+                        right: -10px;
+                    }
+                    .rectGreen {
+                        width: 35px;
+                        height: 45px;
+                        bottom: -10px;
+                        left: 10px;
+                    }
                 }
             }
         }
@@ -328,6 +407,7 @@ $grey: #959595;
             font-size: 22px;
         }
         @media screen and (max-width: $xxl) {
+            margin-top: 60px;
             background-image: url("../../assets/landing/logoMaker.svg");
             .title {
                 font-size: 39px;
@@ -389,7 +469,7 @@ $grey: #959595;
                 position: relative;
                 .image {
                     height: 100%;
-                    border: 5px solid $yellow-dark;
+                    // border: 5px solid $yellow-dark;
                     border-top-right-radius: 119px;
                     border-bottom-left-radius: 119px;
                 }
@@ -423,19 +503,31 @@ $grey: #959595;
                         bottom: -10%;
                         left: 50%;
                         transform: translateX(-50%);
-
                         max-height: 175px;
                     }
                 }
                 @media screen and (max-width: $xl) {
                     text-align: center;
                     .image {
-                        width: 70%;
+                        width: 100%;
                     }
                 }
                 @media screen and (max-width: $md) {
                     .image {
                         width: 100%;
+                    }
+                    .card {
+                        max-width: 170px;
+                        max-height: 105px;
+                        .title {
+                            font-size: 13px;
+                            margin-bottom: 10px;
+                        }
+                        .highlight {
+                            margin-top: 10px;
+                            font-size: 10px;
+                            line-height: 15px;
+                        }
                     }
                 }
             }
@@ -479,11 +571,21 @@ $grey: #959595;
         @media screen and (max-width: $md) {
             padding: 67px 40px;
             .contentRight {
+                align-items: center;
+                text-align: center;
+                .title {
+                    font-size: 24px;
+                    line-height: 36px;
+                }
                 .description {
-                    margin-top: 30px;
+                    margin-top: 15px;
+                    font-size: 12px;
+                    line-height: 18px;
                 }
                 .checkList {
-                    margin-top: 40px;
+                    margin-top: 10px;
+                    font-size: 10px;
+                    line-height: 16px;
                 }
             }
         }
@@ -520,6 +622,14 @@ $grey: #959595;
         }
         @media screen and (max-width: $md) {
             padding: 20px;
+            .title {
+                font-size: 23px;
+                line-height: 35px;
+            }
+            .subTitle {
+                font-size: 13px;
+                line-height: 20px;
+            }
             .content {
                 margin-top: 30px;
                 flex-direction: column;
@@ -531,9 +641,12 @@ $grey: #959595;
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: $grey-light;
+        // background-color: $grey-light;
         .cardContainer {
             display: flex;
+        }
+        .cardContainerTablet {
+            display: none;
         }
         .content {
             margin-left: 120px;
@@ -550,6 +663,7 @@ $grey: #959595;
             }
             .like {
                 margin-top: 65px;
+                margin-left: 30px;
                 width: fit-content;
                 .subTitle {
                     color: $black;
@@ -572,6 +686,10 @@ $grey: #959595;
                 .arrows {
                     margin-top: 50px;
                     text-align: center;
+                    svg {
+                        width: 50px;
+                        height: 50px;
+                    }
                 }
             }
         }
@@ -588,15 +706,67 @@ $grey: #959595;
                 margin-left: 0;
                 .description {
                     text-align: center;
+                    max-width: 480px;
+                }
+                .cardContainerTablet {
+                    display: flex;
+                    @media screen and (max-width: $md) {
+                        display: none;
+                    }
                 }
                 .like {
+                    display: flex;
+                    flex-direction: column-reverse;
                     margin-top: 0;
+                    .subTitle {
+                        font-size: 24px;
+                        line-height: 36px;
+                    }
                     .imgContainer {
                         display: flex;
                         .image {
                             @media screen and (max-width: $sm) {
                                 margin-left: -65px;
                             }
+                        }
+                    }
+                    .arrows {
+                        margin: 20px 0;
+                    }
+                }
+            }
+        }
+        @media screen and (max-width: $md) {
+            padding: 35px 60px;
+            .content {
+                .title {
+                    font-size: 23px;
+                    line-height: 35px;
+                }
+                .description {
+                    font-size: 14px;
+                    line-height: 21px;
+                    padding: 0 20px;
+                }
+                .like {
+                    margin-left: 0;
+                    .subTitle {
+                        font-size: 12px;
+                        color: $black-dark;
+                    }
+                    .imgContainer {
+                        margin-top: 0;
+                        .image {
+                            width: 45px;
+                            height: 45px;
+                            margin-left: -25px;
+                        }
+                    }
+                    .arrows {
+                        margin: 10px 0;
+                        svg {
+                            width: 32px;
+                            height: 32px;
                         }
                     }
                 }
@@ -656,9 +826,9 @@ $grey: #959595;
             .container {
                 display: block;
                 background-image: url("../../assets/landing/working-from-home-mobile.png");
-                padding: 30px 45px;
+                padding: 19px 15px;
                 background-position: top;
-                height: unset;
+                height: 160px;
                 .title {
                     font-size: 14px;
                     line-height: 20px;
@@ -667,7 +837,7 @@ $grey: #959595;
                     margin-top: 10px;
                     font-size: 7px;
                     line-height: 18px;
-                    padding: 7px;
+                    padding: 4px 7px;
                 }
             }
         }
