--- a/src/util/Card/style.module.scss
+++ b/src/util/Card/style.module.scss
@@ -125,7 +125,7 @@ $yellow: #fed821;
 	border: 1px solid $green;
 	border-radius: 8px;
 	padding: 32px 10px;
-	background-color: $white;
+	background-color: $white-dark;
 	position: relative;
 	margin: 23px;
 	box-shadow: 0px 2px 24px rgb(0 0 0 / 20%);
