--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -213,31 +213,50 @@ $grey: #959595;
 			}
 		}
 		.popularService {
-			padding: 0 120px 160px 120px;
+			padding: 0 105px 160px 105px;
+			.title {
+				margin-left: 15px;
+			}
 			.wrapper {
 				margin-top: 40px;
 				width: 100%;
 				:global(.react-multiple-carousel__arrow--left) {
 					transform: translateY(-50%);
 					top: 50%;
-					left: 0;
+					left: 15px;
+					@media screen and (max-width: $md) {
+						left: 0;
+					}
 				}
 				:global(.react-multiple-carousel__arrow--right) {
 					transform: translateY(-50%);
 					top: 50%;
-					right: 0;
+					right: 15px;
+					@media screen and (max-width: $md) {
+						right: 0;
+					}
 				}
 			}
 			@media screen and (max-width: $xxl) {
-				padding: 0 60px 110px 60px;
+				padding: 0 35px 110px 35px;
 			}
 			@media screen and (max-width: $md) {
+				.title {
+					margin-left: 0;
+				}
 				padding: 20px;
+			}
+			.test {
+				margin-left: 15px;
+				margin-right: 15px;
+				@media screen and (max-width: $md) {
+					margin: 0;
+				}
 			}
 		}
 	}
 	.fingertips {
-		padding: 70px 70px 70px 115px;
+		padding: 70px 70px 70px 120px;
 		background-color: $white;
 		color: $black;
 		.title {
@@ -296,7 +315,7 @@ $grey: #959595;
 			}
 		}
 		@media screen and (max-width: $xl) {
-			padding: 57px;
+			padding: 50px;
 			.title {
 				font-size: 25px;
 				line-height: 39px;
@@ -388,7 +407,7 @@ $grey: #959595;
 		background-position: right center;
 		background-size: cover;
 		background-repeat: no-repeat;
-		padding: 70px 100px;
+		padding: 70px 120px;
 		border-top: 5px solid $yellow-dark;
 		border-bottom: 5px solid $yellow-dark;
 		color: $white-dark;
@@ -593,6 +612,7 @@ $grey: #959595;
 	.category {
 		background-color: $grey-light;
 		padding: 0 100px;
+		padding-bottom: 50px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -641,6 +661,9 @@ $grey: #959595;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		border: 1px solid $yellow-dark;
+		border-left-width: 0;
+		border-right-width: 0;
 		// background-color: $grey-light;
 		.cardContainer {
 			display: flex;
@@ -781,7 +804,7 @@ $grey: #959595;
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 			background-position: center;
-			padding: 113px;
+			padding: 100px 120px;
 			height: 678px;
 			display: flex;
 			flex-direction: column;
