fixed first section person issue

--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -45,7 +45,7 @@ $grey: #959595;
 			transform: scaleX(-1);
 			vertical-align: middle;
 		}
-		@media screen and (max-width: $xxl) {
+		@media screen and (max-width: $xl) {
 			.leftSide {
 				.title {
 					font-size: 30px;
